public enum Color {
  ORANGE,
  GREEN,
  LIGHT_BLUE,
  DARK_BLUE,
  RED,
  PINK,
  YELLOW
}
